# matrix-ical-bot

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  default.nix  dockerimage.nix  ical-bot.nix  icalendar.nix  matrix-ical-bot.cabal  matrix-ical.cabal  nixpkgs.json  package.yaml  shell.nix
app/: Config.hs  Main.hs  ProgramOptions.hs
src/: MatrixIcal.hs  MatrixIcalUtil.hs
src/IcalBot/: API.hs  AppointedTime.hs  Appointment.hs  Appt.hs  ApptStatus.hs  DateOrDateTime.hs  EventDB.hs  Formatting.hs  InternalEvent.hs  MatrixIncomingMessage.hs  MatrixMessage.hs  RepeatInfo.hs  Scheduling.hs  SubAppt.hs  TimeOrRepeat.hs  Util.hs
test/: Tests.hs
test/data/: created_in_thunderbird.ical  just_date.ical  second_creation.ical  yearly-repeat.ical
