name:                matrix-ical-bot
version:             0.1.0.0
synopsis:            Bot that listens for ical file system changes and posts them to matrix rooms
description:         Bot that listens for ical file system changes and posts them to matrix rooms
homepage:            https://gitlab.plapadoo.de/plapadoo/matrix-ical-bot
license:             BSD3
license-file:        LICENSE
author:              plapadoo UG (haftungsbeschränkt)
maintainer:          middendorf@plapdoo.de
copyright:           2017 plapadoo UG (haftungsbeschränkt)
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable matrix-ical-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , iCalendar
                     , optparse-applicative
                     , filepath
                     , data-default
                     , containers
                     , text
                     , matrix-bot-api
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings, DeriveFunctor

source-repository head
  type:     git
  location: https://gitlab.plapadoo.de/plapadoo/matrix-ical-bot
