name:           matrix-ical
version:        0.2
synopsis:       Bot that listens for ical file system changes and posts them to matrix rooms
description:    Bot that listens for ical file system changes and posts them to matrix rooms
homepage:       https://github.com/plapadoo/matrix-ical#readme
bug-reports:    https://github.com/plapadoo/matrix-ical/issues
author:         Philipp Middendorf
maintainer:     Philipp Middendorf <middendorf@plapadoo.de>
copyright:      plapadoo UG 2018
category:       Web
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/plapadoo/matrix-ical

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings NoImplicitPrelude
  exposed-modules:     IcalBot.Util
                     , IcalBot.MatrixMessage
                     , IcalBot.EventDB
                     , IcalBot.Appointment
                     , IcalBot.Scheduling
                     , IcalBot.Formatting
  build-depends: 
      base
    , iCalendar
    , lens
    , text-format
    , text
    , vector-space
    , bifunctors
    , tz
    , time
    , filepath
    , thyme
    , fsnotify
    , directory
    , data-default
    , lucid
    , containers
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

executable matrix-ical-bot
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions: OverloadedStrings NoImplicitPrelude
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base
    , lens
    , matrix-ical
    , thyme
    , optparse-applicative
    , filepath
    , tz
    , vector-space
    , text
    , fsnotify
    , text-format
  default-language: Haskell2010
  other-modules: ProgramOptions

test-suite test-hunit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings NoImplicitPrelude
  hs-source-dirs:      test
  Main-is:             Tests.hs
  Build-Depends:       base
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , text
                     , vector-space
                     , thyme
                     , tz
                     , old-locale
                     , matrix-ical
